edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "wayplatform/connect/tachograph/dd/v1/generation.proto";
import "wayplatform/connect/tachograph/dd/v1/version.proto";
import "wayplatform/connect/tachograph/vu/v1/vehicle_unit_file_gen1.proto";
import "wayplatform/connect/tachograph/vu/v1/vehicle_unit_file_gen2_v1.proto";
import "wayplatform/connect/tachograph/vu/v1/vehicle_unit_file_gen2_v2.proto";

// Vehicle Unit download file with generation-specific access.
//
// A VU download file contains data from ONE generation only. The protocol does not support
// mixing Gen1 and Gen2 transfers in the same file.
//
// See Appendix 7, Section 1.1: "This Appendix specifies therefore two types of data downloads
// from the VU: Generation 2 type of VU data download, providing the generation 2 data structure;
// Generation 1 type of VU data download, providing the generation 1 data structure."
//
// This message uses a tagged union pattern where the generation and version fields determine
// which variant field is populated:
// - For Gen1 files: generation=GENERATION_1, gen1 field populated
// - For Gen2 V1 files: generation=GENERATION_2, version=VERSION_1, gen2_v1 field populated
// - For Gen2 V2 files: generation=GENERATION_2, version=VERSION_2, gen2_v2 field populated
message VehicleUnitFile {
  // Generation of this VU file (determines which field below is populated).
  dd.v1.Generation generation = 1;

  // Version of this VU file (only relevant for Gen2).
  dd.v1.Version version = 2;

  // Tagged union - only one of these is populated based on generation/version.
  VehicleUnitFileGen1 gen1 = 3;
  VehicleUnitFileGen2V1 gen2_v1 = 4;
  VehicleUnitFileGen2V2 gen2_v2 = 5;
}
